<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BasicBluetooth</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="action_scan">Scan</string>
    <string name="action_connect">Connect</string>
    <string name="text_pair">Pair</string>
    <string name="text_scan">Scan</string>
    <string name="text_disable">Disable</string>
    <string name="text_connect">Connect</string>
    <string name="text_send">Send</string>
    <string name="text_data_receieved">Data Received</string>
    <string name="text_list_devices">Available Devices</string>
    <string name="text_tppe_to_send">Type here</string>
</resources>
